webclient/public/stylesheets/jquery-ui-1.7.2.custom-tabs.css
/*
* Source: jQuery tab CSS Framework
*/

.fieldset-group.ui-corner-all {
  -moz-border-radius-bottomleft:0px;
  -moz-border-radius-bottomright:0px;
  -moz-border-radius-topleft:0px;
  -moz-border-radius-topright:0px;
  border: none;
}

.fieldset-group.ui-tabs {
  margin: 1em;
  padding: 0px;
  color: #333;
  font: 1em "lsLucida Grande", "Trebuchet MS", Verdana, sans-serif;
}

.fieldset-group fieldset.ui-tabs-panel {
  -moz-border-radius-bottomleft:5px;
  -moz-border-radius-bottomright:5px;
  -moz-border-radius-topleft:5px;
  -moz-border-radius-topright:5px;
  border-color: #DDDDDD #CCCCCC #BBBBBB;
  border-style:solid;
  border-width: 1px 1px 1px;
  margin: 0px;
  background-color: #eee;
}

.fieldset-group .ui-widget-header {
  border: none;
  background: transparent;
  margin: 0px 5px 0px;
}

.fieldset-group.ui-tabs .ui-tabs-nav li a {
  padding-top: 0;
  padding-bottom: 0;
}

.fieldset-group .ui-tabs-nav .ui-state-default,
.fieldset-group .ui-tabs-nav .ui-state-active {
  -moz-border-radius-topleft:5px;
  -moz-border-radius-topright:5px;
  border-color: #DDDDDD #CCCCCC #BBBBBB;
  border-width: 1px;
  border-style: solid;
  position: relative;
  bottom: -1;
}

.fieldset-group .ui-tabs-nav .ui-state-active {
  border-bottom-style: none;
}

.fieldset-group.ui-widget-content .ui-tabs-nav .ui-state-default,
.fieldset-group.ui-widget-content .ui-tabs-nav .ui-state-active {
  background-color: #eee;
  background-image: none;
  font-weight: bold;
}

.fieldset-group.ui-widget-content {
  background: transparent;
}

